k8s/mysql-svc.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: mysql-service 
  namespace: default
spec: 
  selector: 
    app: mysql 
  ports: 
    - name: mysql 
      port: 3306
      targetPort: 3306
