k8s/spring_ingress.yaml
apiVersion: apps/v1 
kind: Ingress 
metadata: 
  name: springboot-web
  namespace: default
  labels:
    app: springboot-web 
spec: 
  rules: 
  - host: kakaopay.local.com 
    http: 
      paths: 
      - path: / 
        backend: 
          serviceName: springboot-web-service 
          servicePort: 80
